--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,13 @@
 /* @import './base.css'; */
+
+body{
+    display: flex;
+    flex-direction: column;
+}
+#app{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
