--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,13 +1,12 @@
 /* @import './base.css'; */
 
-body{
-    display: flex;
-    flex-direction: column;
+body {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(242, 242, 242);
 }
-#app{
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+#app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
